# guionardo

./: DEV.md  README.md  README_2.md  TEMPLATE.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  main.yml  python_front.yml
src/: build.py  gh_api.py  models.py  reports.py  template.py
src/sectors/: __init__.py  badges.py  bio.py  footer.py  github_readme_stats.py  joke.py  languages.py  repositories.py
src/tools/: html.py
